# scytale

./: .flake8  .gitattributes  .gitignore  Pipfile  README.md  default.nix  flake.nix  pyproject.toml  renovate.json  scytale.py  shell.nix  skytale.py  test_scytale.py  test_skytale.py
.github/workflows/: branch.yml  flake-check.yml  release.yml  update-flake.yml
docs/: conf.py  index.rst
nix/: sources.json
scytale/: scytale.py
scytale_cipher/: scytale.py
tests/: test_scytale.py
