[tool.poetry]
name = "scytale-cipher"
packages = [
    { include = "scytale_cipher"},
]
version = "0.1.2"
description = "Scytale cipher algorithm cli tool"
authors = ["Jan Schmitt <git@smittie.de>"]
maintainers = ["Jan Schmitt <git@smittie.de>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/lockejan/scytale"
repository = "https://github.com/lockejan/scytale"
keywords = ["scytale", "cipher", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
scytale = 'scytale_cipher.scytale:main'

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-cov = "6.2.1"
bandit = "1.8.5"
safety = "2.3.5"
yapf = "0.43.0"
# ruff = "0.1.13"
toml = "0.10.2"

[tool.yapfignore]
ignore_patterns = [
  "result/**/*.py",
]
style = [
"{based_on_style: pep8, indent_width: 2}"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
